--- a/public/static/css/custom.css
+++ b/public/static/css/custom.css
@@ -179,6 +179,8 @@ h3.section-title {
   max-width: 480px;
   /* width: 25%;*/ /* for big screen */
   flex: 25%; /* for big screen */
+  flex-shrink: unset !important;
+  flex-grow: unset !important;
 }
 
 .flex-1 {
@@ -215,9 +217,35 @@ h3.section-title {
   /* outline: 1px dotted blue; */
 }
 
+
+.homepage-dashboard .universal-items-group {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.homepage-dashboard .universal-items-group .title {
+  padding-bottom: 10px;
+}
+
+
+.cetegories-dashboard .universal-items-group {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.cetegories-dashboard .universal-items-group .title {
+  padding-bottom: 10px;
+}
+
+
 .shop-item {
   /* outline: 1px dotted blue; */
   position: relative;
+}
+.slider-style .slick-slide {
+  width: 300px;
+}
+.slider-style .slick-slide .shop-item {
+  /* width: 300px; */
+  padding-right: 20px;
 }
 
 .cart-item {
@@ -256,6 +284,16 @@ h3.section-title {
 
   height: 50px;
   font-size: 18px;
+}
+.facts.items.horisontal {
+  flex-direction: row;
+}
+.facts.items.horisontal .fact {
+  padding-left: 0px;
+  padding-right: 40px;
+}
+.homepage-stats {
+  padding-bottom: 20px;
 }
 .facts.items .fact-icon {
   padding-right: 0px;
@@ -950,7 +988,40 @@ h3.section-title {
   flex: 16.66%;
 }
 
+.bookings-group {
+  padding-bottom: 20px;
+}
+.bookings-group-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: silver;
 
+  font-size: 12px;
+  font-weight: 600;
+}
+.bookings-group-header .pair {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: flex-start;
+
+  padding: 10px;
+  padding-left: 20px;
+}
+.bookings-group-header .pair span:first-child {
+  text-transform: uppercase;
+}
+
+.bookings-group table {
+  margin-bottom: 0px;
+}
+.bookings-group table td,
+.bookings-group table th {
+  vertical-align: middle;
+  padding: 10px;
+  padding-left: 20px;
+}
 
 /* RESPONSIVE */
 
@@ -959,6 +1030,9 @@ h3.section-title {
     /* width: 50%; */
     flex: 50%;
   }
+  .slider-style .slick-slide {
+    width: 260px;
+  }
 }
 
 @media (min-width: 800px) {
@@ -966,11 +1040,17 @@ h3.section-title {
     /* width: 33.33%; */
     flex: 33.33%;
   }
+  .slider-style .slick-slide {
+    width: 300px;
+  }
 }
 
 @media (min-width: 960px) {
   .grid-items > .item {
     /* width: 25%; for big screen */
     flex: 25%;
+  }
+  .slider-style .slick-slide {
+    width: 360px;
   }
 }
