--- a/public/static/css/custom.css
+++ b/public/static/css/custom.css
@@ -232,7 +232,7 @@ h3.section-title {
   padding-bottom: 10px;
 }
 .cetegories-dashboard .universal-items-group .title {
-  padding-bottom: 10px;
+  padding-bottom: 0px;
 }
 
 
@@ -246,6 +246,7 @@ h3.section-title {
 .slider-style .slick-slide .shop-item {
   /* width: 300px; */
   padding-right: 20px;
+  padding-top: 20px;
 }
 
 .cart-item {
