--- a/public/static/css/custom.css
+++ b/public/static/css/custom.css
@@ -134,8 +134,9 @@ h3.section-title {
   margin-right: auto;
   padding-top: 0px;
   padding-bottom: 0px;
-  padding-left: 40px;
-  padding-right: 40px;
+  /* default je za najmanje ekrane */
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .inner-full {
   width: 100%;
@@ -217,7 +218,6 @@ h3.section-title {
   /* outline: 1px dotted blue; */
 }
 
-
 .homepage-dashboard .universal-items-group {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -226,7 +226,6 @@ h3.section-title {
   padding-bottom: 10px;
 }
 
-
 .cetegories-dashboard .universal-items-group {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -234,7 +233,6 @@ h3.section-title {
 .cetegories-dashboard .universal-items-group .title {
   padding-bottom: 0px;
 }
-
 
 .shop-item {
   /* outline: 1px dotted blue; */
@@ -1030,6 +1028,29 @@ h3.section-title {
   padding-left: 20px;
 }
 
+/* search and filters */
+.shop-filter-widget {
+  padding-bottom: 10px;
+}
+.shop-filter-widget .filters-panel {
+  padding: 0px;
+  border: 0px solid gray;
+  border-radius: 0px;
+  background-color: transparent;
+  /* background-color: rgba(220, 220, 220, 1); */
+}
+.shop-filter-widget .filters-panel .form-group {
+  margin-bottom: 0px;
+  padding-bottom: 10px;
+  
+}
+.shop-filter-widget .filters-panel label {
+  white-space: nowrap;
+  font-size: 14px;
+  margin-bottom: 0px;
+  height: 24px;
+}
+
 /* RESPONSIVE */
 
 @media (min-width: 640px) {
@@ -1039,6 +1060,10 @@ h3.section-title {
   }
   .slider-style .slick-slide {
     width: 260px;
+  }
+  .inner {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
@@ -1050,6 +1075,10 @@ h3.section-title {
   .slider-style .slick-slide {
     width: 300px;
   }
+  .inner {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 }
 
 @media (min-width: 960px) {
@@ -1059,5 +1088,9 @@ h3.section-title {
   }
   .slider-style .slick-slide {
     width: 360px;
+  }
+  .inner {
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
