--- a/public/static/css/custom.css
+++ b/public/static/css/custom.css
@@ -590,6 +590,16 @@ h3.section-title {
   font-weight: 400;
 }
 
+.breadcrumb {
+  padding: 0px;
+  margin: 0px;
+  font-size: 14px;
+  font-weight: 400;
+
+  width: 100%;
+  justify-content: flex-end;
+}
+
 .avatar {
   display: block;
   width: 100px;
@@ -1045,7 +1055,6 @@ h3.section-title {
 .shop-filter-widget .filters-panel .form-group {
   margin-bottom: 0px;
   padding-bottom: 10px;
-  
 }
 .shop-filter-widget .filters-panel label {
   white-space: nowrap;
