--- a/public/static/css/custom.css
+++ b/public/static/css/custom.css
@@ -944,7 +944,87 @@ h3.section-title {
   font-size: 10px;
 }
 
-.product-page .summary {
+.homepage-slider-group {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+}
+.homepage-slider-group .clip-top {
+  z-index: 99;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 50px;
+  background-color: white;
+  clip-path: polygon(0% 0px, 100% 0%, 100% calc(100% - 50px), 0% 100%);
+}
+.homepage-slider-group .clip-bottom {
+  z-index: 99;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 50px;
+  background-color: white;
+  clip-path: polygon(100% 50px, 100% 0%, 100% calc(100% - 50px), 0% 100%);
+}
+.homepage-slider-group .visible-area {
+  z-index: 1;
+}
+.homepage-slider-group .visible-area-overlay {
+  z-index: 50;
+  position: absolute;
+  top: 120px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  /* background: orange; */
+}
+.homepage-slider-group .slick-slide {
+  position: relative;
+  width: 100%;
+  height: 500px;
+}
+
+.homepage-slider-group .slick-slide .slide-img {
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  background-position: center;
+  /* outline: 1px dashed gray; */
+
+  display: flex !important;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.homepage-slider-group .slick-slide .slide-img.slide-img-1 {
+  background-image: url("/static/img/tours/tour-1-3.jpg");
+}
+.homepage-slider-group .slick-slide .slide-img.slide-img-2 {
+  background-image: url("/static/img/tours/tour-7-3.jpg");
+}
+.homepage-slider-group .slick-slide .slide-img.slide-img-3 {
+  background-image: url("/static/img/tours/tour-9-1.jpg");
+}
+.homepage-slider-group .slick-slide .slide-quotes {
+  display: none;
+}
+
+.homepage-slider-group .slide-quotes {
+  color: yellow;
+  font-weight: 700;
+  font-size: 32px;
+  text-align: center;
+
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.product-page .summary,
+.homepage .summary {
   padding: 10px;
   font-weight: 700;
   font-size: 22px;
@@ -1061,6 +1141,27 @@ h3.section-title {
   font-size: 14px;
   margin-bottom: 0px;
   height: 24px;
+}
+
+.error-image-overlay {
+  height: 60vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.error-image-container {
+  display: inline-block;
+  background-image: url("/static/img/dog-ate-big.png");
+  background-size: cover;
+  background-position: center;
+  width: 40vh;
+  height: 40vh;
+}
+.error-image-text {
+  font-size: 28px;
+  color: #2f8e89;
 }
 
 /* RESPONSIVE */
