--- a/public/static/css/custom.css
+++ b/public/static/css/custom.css
@@ -218,6 +218,13 @@ h3.section-title {
   /* outline: 1px dotted blue; */
 }
 
+.universal-items {
+}
+.universal-items.slider-style {
+  overflow: hidden;
+}
+
+
 .homepage-dashboard .universal-items-group {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -351,6 +358,42 @@ h3.section-title {
   padding-bottom: 20px;
 }
 
+.avatar {
+  display: block;
+  width: 100px;
+  height: 100px;
+  outline: 2px dashed blue;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.avatar img {
+  display: block;
+  outline: 2px dotted red;
+  width: 100px;
+  height: 100px;
+}
+
+.header .avatar-group {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+}
+.header .avatar-group .avatar-img {
+  width: 30px;
+  height: 30px;
+  border-radius: 30px;
+  overflow: hidden;
+  position: relative;
+  top: 4px;
+}
+.header .avatar-group .avatar-img img {
+  display: block;
+  width: 30px;
+  height: 30px;
+  vertical-align: middle;
+}
+
 .header {
   position: relative;
   display: block;
@@ -369,33 +412,8 @@ h3.section-title {
   background-position: center;
   background-size: cover;
   padding-top: 0px;
-  /* clip-path: polygon( 0 0, 100% 0, 100% calc(100% - var(--section-rotate)), 0 100% );*/ /* natours.dev */
-  clip-path: polygon(0% 0%, 100% 0%, 100% calc(100% - 50px), 0% 100%);
-}
-.header.frontpage {
-  width: 100vw;
-  height: 100vh;
 }
 
-.header .big-title {
-  position: absolute;
-  /*
-  left: 50px;
-  top: 210px;
-  */
-  left: 5vw;
-  top: 50vw;
-  font-weight: 900;
-  font-size: 72px;
-  line-height: 68px;
-  opacity: 0;
-}
-.header.frontpage .big-title {
-  position: absolute;
-  left: 5vw;
-  top: 5vw;
-  opacity: 1;
-}
 .header .big-title .big-info {
   display: block;
   padding-top: 20px;
@@ -404,10 +422,14 @@ h3.section-title {
   line-height: 32px;
 }
 
+.header .header-line-big {
+  display: none;
+}
+
 .header-line {
   position: absolute;
   display: block;
-  height: 100px;
+  /* height: 100px; */
   width: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   top: 100px;
@@ -431,6 +453,20 @@ h3.section-title {
   justify-content: flex-start;
   align-items: center;
 }
+.header .small-options-container .options {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  text-align: right;
+  padding-bottom: 20px;
+}
+
+.header .small-options-container {
+  display: none;
+}
+.header.menu-opened .small-options-container {
+  display: block;
+}
 
 .header .option,
 .header a.option {
@@ -439,9 +475,77 @@ h3.section-title {
   margin-right: 10px;
   margin-left: 10px;
   color: white;
+  cursor: pointer;
 }
 .header a.option:hover {
   color: white;
+}
+
+.header .option.danger,
+.header a.option.danger {
+  color: tomato;
+}
+
+.header .small-options-container .option {
+  font-size: 32px;
+}
+.header .small-options-container .option.suboption {
+  font-size: 24px;
+}
+
+.header .small-options-container .avatar-group {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+}
+.header .small-options-container .avatar-group .avatar-img {
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  overflow: hidden;
+  position: relative;
+  top: 0px;
+}
+.header .small-options-container .avatar-group .avatar-img img {
+  display: block;
+  width: 40px;
+  height: 40px;
+  vertical-align: middle;
+}
+
+.header .small-options-container .cart-icon {
+  position: relative;
+  /* width: 45px; */
+  height: 45px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  cursor: pointer;
+  width: 100%;
+}
+
+.big-nav {
+}
+.small-options-container {
+  /* outline: 1px dashed orange; */
+}
+
+.header .logo-and-hamburger {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.header .hamburger-icon {
+  color: white;
+  font-size: 64px;
+  cursor: pointer;
 }
 
 .triangle {
@@ -600,42 +704,6 @@ h3.section-title {
   justify-content: flex-end;
 }
 
-.avatar {
-  display: block;
-  width: 100px;
-  height: 100px;
-  outline: 2px dashed blue;
-  border-radius: 100%;
-  overflow: hidden;
-}
-.avatar img {
-  display: block;
-  outline: 2px dotted red;
-  width: 100px;
-  height: 100px;
-}
-
-.header .avatar-group {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
-}
-.header .avatar-group .avatar-img {
-  width: 30px;
-  height: 30px;
-  border-radius: 30px;
-  overflow: hidden;
-  position: relative;
-  top: 4px;
-}
-.header .avatar-group .avatar-img img {
-  display: block;
-  width: 30px;
-  height: 30px;
-  vertical-align: middle;
-}
-
 .guides-item .avatar-group {
   display: flex;
   flex-direction: row;
@@ -709,9 +777,11 @@ h3.section-title {
   position: fixed;
   top: 20px;
   right: 0px;
+  /*
   width: 60px;
   height: 60px;
-  padding: 5px;
+  */
+  padding: 15px;
   background-color: tomato;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -1167,7 +1237,86 @@ h3.section-title {
 
 /* RESPONSIVE */
 
+/* najpre za najmanji ekran je default */
+
+.header {
+  height: 100vh;
+  /* clip-path: polygon( 0 0, 100% 0, 100% calc(100% - var(--section-rotate)), 0 100% );*/ /* natours.dev */
+  clip-path: none;
+}
+.header.frontpage {
+  width: 100%;
+  height: 100vh;
+}
+.header .big-title {
+  position: absolute;
+  /* left: 50px; */
+  top: 100vh;
+  left: 5vw;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 68px;
+  opacity: 0;
+  /* z-index: -999; */
+}
+.header.frontpage .big-title {
+  position: absolute;
+  left: 5vw;
+  top: 140px;
+  opacity: 1;
+  z-index: 5;
+}
+
+.header .header-line-small {
+}
+.header .header-line-big {
+  display: none;
+}
+
+.header-line {
+  z-index: 99;
+  top: 0px;
+}
+.header.frontpage .header-line {
+  top: 0px;
+}
+
+.floating-ap-bar {
+  display: none;
+}
+
 @media (min-width: 640px) {
+  .header {
+    height: 400px;
+    /* clip-path: polygon( 0 0, 100% 0, 100% calc(100% - var(--section-rotate)), 0 100% );*/ /* natours.dev */
+    clip-path: polygon(0% 0%, 100% 0%, 100% calc(100% - 50px), 0% 100%);
+  }
+
+  .header.frontpage .big-title {
+    position: absolute;
+    left: 5vw;
+    top: 5vw;
+    opacity: 1;
+  }
+
+  .header .header-line-small {
+    display: none;
+  }
+  .header .header-line-big {
+    display: block;
+  }
+
+  .header-line {
+    top: 100px;
+  }
+  .header.frontpage .header-line {
+    top: 400px;
+  }
+
+  .floating-ap-bar {
+    display: block;
+  }
+
   .grid-items > .item {
     /* width: 50%; */
     flex: 50%;
