--- a/public/static/css/custom.css
+++ b/public/static/css/custom.css
@@ -407,7 +407,7 @@ h3.section-title {
       rgba(255, 255, 255, 0) 70%,
       rgba(255, 255, 255, 0) 100%
     ),
-    url("/static/img/tours/tour-1-3.jpg");
+    url("/static/img/tours/tour-1-cover.jpg");
   background-position: center;
   background-size: cover;
   padding-top: 0px;
@@ -1088,24 +1088,27 @@ h3.section-title {
   align-items: center;
 }
 .homepage-slider-group .slick-slide .slide-img.slide-img-1 {
-  background-image: url("/static/img/tours/tour-1-3.jpg");
+  background-image: url("/static/img/tours/tour-2-2.jpg");
 }
 .homepage-slider-group .slick-slide .slide-img.slide-img-2 {
-  background-image: url("/static/img/tours/tour-7-3.jpg");
+  background-image: url("/static/img/tours/tour-2-1.jpg");
 }
 .homepage-slider-group .slick-slide .slide-img.slide-img-3 {
-  background-image: url("/static/img/tours/tour-9-1.jpg");
+  background-image: url("/static/img/tours/tour-1-2.jpg");
+}
+.homepage-slider-group .slick-slide .slide-img.slide-img-4 {
+  background-image: url("/static/img/tours/tour-6-3.jpg");
 }
 .homepage-slider-group .slick-slide .slide-quotes {
   display: none;
 }
 
 .homepage-slider-group .slide-quotes {
-  color: yellow;
-  font-weight: 700;
+  color: whitesmoke;
+  font-weight: 400;
   font-size: 32px;
   text-align: center;
-
+  font-style: italic;
   padding-left: 40px;
   padding-right: 40px;
 }
@@ -1175,11 +1178,12 @@ h3.section-title {
 
 .bookings-group {
   padding-bottom: 20px;
-  min-width: 640px;
+  /* min-width: 640px; */
 }
 .bookings-group-header {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   background-color: silver;
 
@@ -1198,6 +1202,15 @@ h3.section-title {
 .bookings-group-header .pair span:first-child {
   text-transform: uppercase;
 }
+.bookings-group-header .pair.pair-order {
+  /*
+  display: inline-block;
+  max-width: 100px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: clip;
+  */
+}
 
 .bookings-group table {
   margin-bottom: 0px;
@@ -1207,6 +1220,11 @@ h3.section-title {
   vertical-align: middle;
   padding: 10px;
   padding-left: 20px;
+
+  /* small screen default */
+  font-size: 12px;
+  padding: 4px;
+  padding-left: 0px;
 }
 
 /* search and filters */
@@ -1302,6 +1320,34 @@ h3.section-title {
   display: none;
 }
 
+.btn.btn-add-cart {
+  display: inline-block;
+
+  text-align: center;
+  vertical-align: middle;
+
+  background-color: transparent;
+  border: 0px;
+  padding: 0px;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1.5;
+
+  border-radius: 0px;
+  border-radius: 500px;
+  border: 0px;
+  color: black;
+  background-color: transparent;
+}
+.btn.btn-add-cart:hover {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+.btn.btn-add-cart span {
+  display: none;
+}
+
 @media (min-width: 640px) {
   .header {
     height: 400px;
@@ -1344,6 +1390,29 @@ h3.section-title {
   .inner {
     padding-left: 20px;
     padding-right: 20px;
+  }
+
+  .btn.btn-add-cart {
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 500px;
+    border: 2px solid black;
+    color: black;
+    background-color: transparent;
+  }
+  .btn.btn-add-cart:hover {
+    background-color: black;
+    color: white;
+    cursor: pointer;
+  }
+  .btn.btn-add-cart span {
+    display: inline;
   }
 }
 
